# whitenoise

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .typos.toml  CHANGELOG.md  CHANGELOG.rst  LICENSE.md  MANIFEST.in  README.md  README.rst  SECURITY.rst  constraints.txt  pyproject.toml  requirements.lint.txt  requirements.test.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: main.yml  publish-develop-docs.yml  publish-py.yml  publish-release-docs.yml  test-docs.yml  test-src.yml
docs/: Makefile  asgi.rst  base.rst  changelog.rst  conf.py  django.rst  flask.rst  ifaqs.rst  index.rst  mkdocs.yml  requirements.txt  wsgi.rst
docs/src/: asgi.md  changelog.md  dictionary.txt  django-faq.md  django-settings.md  django.md  index.md  license.md  quick-start.md  servestatic-asgi.md  servestatic.md  wsgi.md
docs/src/assets/css/: main.css
requirements/: build-docs.txt  compile.py  py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py37-django22.txt  py37-django30.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django22.txt  py39-django30.txt  py39-django31.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt  requirements.in  test-src.txt  test.txt
scripts/: generate_default_media_types.py  lint.sh
src/servestatic/: __init__.py  asgi.py  base.py  middleware.py  storage.py  wsgi.py
src/servestatic/runserver_nostatic/management/commands/: runserver.py
src/whitenoise/: __init__.py  asgi.py  base.py  compat.py  compress.py  media_types.py  middleware.py  responders.py  storage.py  string_utils.py  wsgi.py
src/whitenoise/runserver_nostatic/management/commands/: runserver.py
staticserver/: __init__.py  base.py  django.py  gzip.py
tests/: conftest.py  custom_compressor.py  django_settings.py  django_urls.py  test_asgi.py  test_compress.py  test_django_collectstatic_gzip.py  test_django_gzip.py  test_django_whitenoise.py  test_gzip.py  test_media_types.py  test_responders.py  test_runserver_nostatic.py  test_storage.py  test_string_utils.py  test_whitenoise.py  utils.py
tests/requirements/: compile.py  py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py310-django52.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py311-django52.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py312-django52.txt  py313-django51.txt  py313-django52.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt
tests/test_files/assets/: custom-mime.foobar
tests/test_files/assets/subdir/: javascript.js
tests/test_files/assets/with-index/: index.html
tests/test_files/root/: broken  robots.txt
tests/test_files/static/: app.js  styles.css
whitenoise/: __init__.py  asgi.py  base.py  compress.py  django.py  gzip.py  http_status.py  httpstatus_backport.py  media_types.py  middleware.py  responders.py  scantree.py  static_file.py  storage.py  storage_backport.py  string_utils.py  utils.py
whitenoise/management/commands/: collectstatic.py  gzipstatic.py
whitenoise/runserver_nostatic/management/commands/: runserver.py
