[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "whitenoise"
version = "6.6.0"
description = "Radically simplified static file serving for WSGI applications"
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = [
  "Django",
]
license = {text = "MIT"}
maintainers = [
  {name = "Adam Johnson", email="me@adamj.eu"},
  {name = "David Evans"},
]
authors = [{name = "David Evans"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
  "Typing :: Typed",
]
[project.optional-dependencies]
brotli = [
  "Brotli",
]
[project.urls]
Changelog = "https://whitenoise.readthedocs.io/en/stable/changelog.html"
Documentation = "https://whitenoise.readthedocs.io/"
Repository = "https://github.com/evansd/whitenoise"

[tool.isort]
add_imports = [
    "from __future__ import annotations"
]
force_single_line = true
profile = "black"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """

[tool.coverage.run]
branch = true
parallel = true
source = [
    "whitenoise",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    ".tox/**/site-packages",
]

[tool.coverage.report]
show_missing = true

[tool.rstcheck]
report_level = "ERROR"
