[metadata]
name = whitenoise
version = 5.3.0
description = Radically simplified static file serving for WSGI applications
long_description = file: README.rst
long_description_content_type = text/x-rst
author = David Evans
author_email = d@evans.io
url = https://whitenoise.evans.io
project_urls =
    Documentation = https://whitenoise.evans.io/
    Changelog = https://whitenoise.evans.io/en/stable/changelog.html
license = MIT
keywords = Django
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
license_file = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
zip_safe = False

[options.extras_require]
brotli =
    Brotli

[options.packages.find]
exclude = tests

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    whitenoise/media_types.py:E501

[coverage:run]
branch = True
parallel = True
source =
    whitenoise
    tests

[coverage:report]
show_missing = True
