[metadata]
name = whitenoise
version = 6.3.0
description = Radically simplified static file serving for WSGI applications
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/evansd/whitenoise
author = David Evans
author_email = d@evans.io
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
    Typing :: Typed
keywords = Django
project_urls =
    Documentation = https://whitenoise.evans.io/
    Changelog = https://whitenoise.evans.io/en/stable/changelog.html

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
brotli =
    Brotli

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    src/whitenoise/media_types.py:E501

[coverage:run]
branch = True
parallel = True
source =
    whitenoise
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True
