[metadata]
name = servestatic
version = 1.0.0
description = Simplified static file serving for Python web apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Archmonger/ServeStatic
author = Mark Bakhit
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: ASGI :: Middleware
    Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware
keywords = Django
project_urls =
    Documentation = https://archmonger.github.io/ServeStatic/
    Changelog = https://archmonger.github.io/ServeStatic/changelog/

[options]
packages = find:
install_requires =
    aiofiles>=22.1.0
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
brotli =
    Brotli

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    src/servestatic/media_types.py:E501

[coverage:run]
branch = True
parallel = True
source =
    servestatic
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True
